data/derived/sp14/progs/unify/prog4874.ml.out
Characters 159-163:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c list * 'c list) list
